--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jade": "~1.11.0",
     "mongoose": "^5.5.11",
     "morgan": "~1.9.1",
+    "redis": "^3.0.2",
     "yargs": "^13.2.4"
   },
   "devDependencies": {
